[gd_scene load_steps=3 format=3 uid="uid://csbipluxt5wgp"]

[ext_resource type="Script" path="res://Scenes/TitleScreen/title_screen.gd" id="1_cij7l"]

[sub_resource type="Theme" id="Theme_pwocd"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cij7l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.174986, 0.240396, 0.558083, 1)

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -92.5
offset_right = 124.5
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 37
text = "Start"

[node name="Fullscreen" type="CheckButton" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 37
text = "Fullscreeen
"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
theme = SubResource("Theme_pwocd")
theme_override_font_sizes/font_size = 37
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 871.0
offset_top = 852.0
offset_right = 1102.0
offset_bottom = 875.0
text = "Brennan Castillo, P2"

[connection signal="pressed" from="Options/Start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="Options/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
